# rules_rust

cargo/private/cargo_lock_info/: BUILD.bazel  main.rs
cargo/private/cargo_manifest_info/: BUILD.bazel  main.rs
crate_universe/private/: common_utils.bzl  crates_repository.bzl  fastpath_cfg_parser.bzl  fastpath_repo.bzl  fastpath_resolver.bzl  fastpath_semver.bzl  fastpath_solver.bzl  fastpath_spoke_render.bzl  generate_utils.bzl
docs/src/: SUMMARY.md  external_crates.md  lockfile_fastpath_workspace.md  lockfile_fastpath_workspace_guide_en.md  lockfile_fastpath_workspace_guide_zh.md  lockfile_fastpath_workspace_status_en.md  lockfile_fastpath_workspace_status_zh.md  lockfile_fastpath_workspace_zh.md
examples/fastpath_regression/: .bazelrc  .gitignore  BUILD.bazel  Cargo.lock.template  Cargo.toml.template  README.md  README.zh.md  WORKSPACE.bazel  build_link_dep.cc  cargo-bazel-lock.json  extra_anyhow.BUILD.bazel  override_impl.rs  test.rs  validate.sh  validate_boundaries.sh
examples/fastpath_regression/build_helper/: Cargo.toml  build.rs
examples/fastpath_regression/build_helper/data/: message.txt
examples/fastpath_regression/build_helper/src/: lib.rs
examples/fastpath_regression/local_macro/: Cargo.toml
examples/fastpath_regression/local_macro/src/: lib.rs
examples/fastpath_regression/override_dep/: Cargo.toml
examples/fastpath_regression/override_dep/src/: lib.rs
examples/fastpath_ripgrep/: README.md  README.zh.md  benchmark.sh  project_e2e.sh
examples/fastpath_smoke/: .bazelrc  BUILD.bazel  Cargo.toml  WORKSPACE.bazel  test.rs
examples/fastpath_smoke/path_dep/: Cargo.toml
examples/fastpath_smoke/path_dep/src/: lib.rs
