workspace(name = "fastpath_smoke_example")

local_repository(
    name = "rules_rust",
    path = "../..",
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")

crates_repository(
    name = "fastpath_smoke_index",
    annotations = {
        "anyhow": [crate.annotation(
            compile_data_glob = ["**/*.md"],
        )],
    },
    cargo_lockfile = "//:Cargo.lock",
    # Minimal fastpath shape: one workspace-root manifest.
    manifests = ["//:Cargo.toml"],
    resolver_backend = "lockfile_fastpath",
)

load("@fastpath_smoke_index//:defs.bzl", "crate_repositories")

crate_repositories()
